--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Eventually</h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				<h1 align="center">FicoFood</h1 align="center">
+				<p align="center">Italian Organic Production<br><br>Learn to cook like a professional Italian chef, choose from our ingredients for your perfect home dishes<br><br><b>PASTA</b><br /><em>High quality ingredients for the perfect "Al Dente" bite</em><br><br><b>HOMEMADE FRESH PASTA</b><br><em> A new form of Italian Grandmother recipes</em><br><br><b>GOURMET RECIPES</b><br><em>Not only tradition but innovation for a real Italian cusine experience</em><br><br><b>OIL and WINE</b><br /><em>Find the perfect match for your dishes</em><br><br>We believe in organic fine high quality pasta<br>We work every day to ensure that everyone can have the opportunity and the right to consume products free of poisons daily<br><a align="centre" href="http://html5up.net"></a></p>
 			</header>
+
+
 
 		<!-- Signup Form -->
 			<form id="signup-form" method="post" action="#">
@@ -38,7 +39,7 @@
 					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Untitled.</li><li>Credits: <a href=FicoFood</a></li>
 				</ul>
 			</footer>
 
