--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1 align="center">FicoFood</h1>
+				<h1>FicoFood</h1>
 				<p align="center">Italian Organic Production<br><br>Learn to cook like a professional Italian chef, choose from our ingredients for your perfect home dishes<br><br><b>PASTA</b><br /><em>High quality ingredients for the perfect "Al Dente" bite</em><br><br><b>HOMEMADE FRESH PASTA</b><br><em> A new form of Italian Grandmother recipes</em><br><br><b>GOURMET RECIPES</b><br><em>Not only tradition but innovation for a real Italian cusine experience</em><br><br><b>OIL and WINE</b><br /><em>Find the perfect match for your dishes</em><br><br>We believe in organic fine high quality pasta<br>We work every day to ensure that everyone can have the opportunity and the right to consume products free of poisons daily<br><a align="centre" href="http://html5up.net"></a></p>
 			</header>
 
