title fix, remove footer ,

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eventually by HTML5 UP</title>
+		<title>Fico Foods - find you next italian recipe</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,7 +18,8 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>FicoFood</h1>
+				<br><br><br><br><br><br>
+				<h1 align="center">FicoFood</h1>
 				<p align="center">Italian Organic Production<br><br>Learn to cook like a professional Italian chef, choose from our ingredients for your perfect home dishes<br><br><b>PASTA</b><br /><em>High quality ingredients for the perfect "Al Dente" bite</em><br><br><b>HOMEMADE FRESH PASTA</b><br><em> A new form of Italian Grandmother recipes</em><br><br><b>GOURMET RECIPES</b><br><em>Not only tradition but innovation for a real Italian cusine experience</em><br><br><b>OIL and WINE</b><br /><em>Find the perfect match for your dishes</em><br><br>We believe in organic fine high quality pasta<br>We work every day to ensure that everyone can have the opportunity and the right to consume products free of poisons daily<br><a align="centre" href="http://html5up.net"></a></p>
 			</header>
 
@@ -32,14 +33,10 @@
 
 			-->
 
-		<!-- Footer -->
-			
-
-
-		 <!-- Begin MailChimp Signup Form -->
+			<!-- Begin MailChimp Signup Form -->
 				<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 				<style type="text/css">
-			#mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; }
+			#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
 			/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 			   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 			</style>
@@ -56,6 +53,9 @@
 		</div>
 
 <!--End mc_embed_signup-->
+
+
+		 
 
 		<!-- Scripts -->
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
