--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<form action="//ficofood.us13.list-manage.com/subscribe/post?u=8ba4a7eaf24ec103cbcb15722&amp;id=cc5c880b26" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 		    <div id="mc_embed_signup_scroll">
 			<label for="mce-EMAIL">Subscribe to our mailing list</label>
-			<input type="email" value="" name="EMAIL" style="width:40%" class="email" id="mce-EMAIL" placeholder="email address" required>
+			</br><input type="email" value="" name="EMAIL" style="width:40%" class="email" id="mce-EMAIL" placeholder="email address" required>
 		    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 		    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8ba4a7eaf24ec103cbcb15722_cc5c880b26" tabindex="-1" value=""></div>
 		    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
